[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-util"
version = "0.1.0"
description = "A CLI tool for PDF operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "pypdf>=3.17.0",
]

[project.scripts]
pdf-util = "pdf_util.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
